# furniture_ecommerce

./: README.md  docker-compose.yaml  pyproject.toml
grpc_auth/: .env.example  Dockerfile  __main__.py  main.py  pyproject.toml  requirements.txt
grpc_auth/src/: auth_controller.py  auth_manager.py  auth_service.py  auth_servicer.py  authorization_controller.py  config.py  jwt_manager.py  redis_manager.py  redis_service.py  server.py
grpc_auth/tests/: test_jwt_manager.py
grpc_product/: .env.example  Dockerfile  __main__.py  main.py  pyproject.toml  requirements.txt
grpc_product/proto/: product.proto
grpc_product/src/: config.py  models.py  mongo_manager.py  mongo_service.py  product_controller.py  product_servicer.py  server.py
grpc_user/: .env.example  Dockerfile  __main__.py  main.py  pyproject.toml  requirements.txt
grpc_user/proto/: user.proto
grpc_user/src/: config.py  controller.py  database.py  models.py  password_manager.py  password_service.py  postgre_manager.py  postgre_service.py  server.py  user_controller.py  user_servicer.py
grpc_user/tests/: test_password_manager.py
rest_gateway/: .env.example  Dockerfile  __main__.py  main.py  pyproject.toml  requirements.txt
rest_gateway/proto/: authorization.proto  product.proto  user.proto
rest_gateway/src/: app.py  auth_helper.py  auth_service.py  config.py  models.py  product_service.py  user_service.py
rest_gateway/src/controllers/: product_controller.py  user_controller.py
rest_gateway/src/services/: auth_service.py  product_service.py  user_service.py
