[tool.poetry]
name = "furniture-ecommerce"
version = "0.1.0"
description = ""
authors = ["Yury Zimarev <yury.zimarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.3"
pyjwt = "^2.8.0"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
python-dotenv = "^1.0.1"
grpcio-reflection = "^1.62.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
