[tool.poetry]
name = "grpc-auth"
version = "0.1.0"
description = ""
authors = ["Yury Zimarev <yury.zimarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "1.65.5"
grpcio-reflection = "1.62.1"
grpcio-tools = "1.62.1"
protobuf = "4.25.3"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
redis = "5.0.3"
setuptools = "69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
