[tool.poetry]
name = "grpc-product"
version = "0.1.0"
description = ""
authors = ["Yury Zimarev <yury.zimarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "2.6.1"
grpcio = "1.62.1"
grpcio-reflection = "1.62.1"
grpcio-tools = "1.62.1"
protobuf = "4.25.3"
pymongo = "4.6.3"
python-dotenv = "1.0.1"
setuptools = "69.5.1"
pydantic = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
